Fixed weird flex stretch on logo when using safari

--- a/src/css/navigationbar.css
+++ b/src/css/navigationbar.css
@@ -12,11 +12,12 @@
   	justify-content: center;
   	align-items: center;
     transition: all 0.25s ease-in-out;
+
 }
 
 .navbar-brand img{
-    height: 80px;
-    width: 100%;
+    height: 100%;
+    width: 300px;
 }
 
 .nav{
